# freya-template

./: Cargo.toml  readme.md
src/: main.rs
