[package]
name = "freya-template"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="49c5a5043a16fc82210af146c345793dd448e519", features = ["macro", "hooks"]}
freya = { git="https://github.com/marc2332/freya", rev="39cbddb004c6ed562d84a26342e36cfbffa85845" }