[package]
name = "freya-template"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="0527cff3a59ba3176f7510a7234c5977ce1b17d7", features = ["macro", "hooks"]}
freya = { git="https://github.com/marc2332/freya", rev="66e9eb9aef7a5d8a43c61e7e6c5b5ffc3ba2f648" }